--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,8 @@ dependencies {
     compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.7'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    
+    // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
+    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
+
 }
