Invoking Data using Post_Methods in java

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,11 @@ dependencies {
 // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.12'
 
+    compile group: 'commons-httpclient', name: 'commons-httpclient', version: '3.1'
+
+
+
+
 
 
 
